[package]
name = "nvim-previewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvim-agent = { path = "nvim-agent" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
log = "0.4.17"
anyhow = "1.0.65"
axum = "0.5.16"
tokio = { version = "1.21.2", features = ["full"] }
once_cell = "1.15.0"
concisemark = { version = "0.2.0" }
open = "3.0.3"
serde = { version = "1.0.145", features = ["derive"] }
mime_guess = "2.0.4"
