[package]
name = "nvim-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rmpv = { version ="1.0", features=["with-serde"] }
rmp-serde = "1.1.0"
serde = { version = "1.0", features=["derive"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
thiserror = "1.0"
errlog = { git = "https://github.com/ikey4u/errlog" }

[target.'cfg(unix)'.dependencies]
unix_socket = "0.5.0"

[dev-dependencies]
tempdir = "0.3"

[build-dependencies]
rmp-serde = "1.1.0"
serde = { version = "1.0", features=["derive"] }
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.1.10"
regex = "1.0"
rmpv = { version ="1.0", features=["with-serde"] }
